--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="background"></div>
 
     <div class="content">
-        <h1>Developed By Muhammad Samad</h1>
+        <h1>Developed By Muhammad Ammar Iqbal</h1>
         <div class="resume-maker">
             <h2>Resume Maker</h2>
             <p>1. <strong>Resume Generator</strong>: Quickly create and customize your professional resume by filling in personal details, skills, education, and work experience.</p>
